0022749: Segfault in HashCode() of Standard_Transient